--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,9 @@ openpyxl>=3.1.0
 python-pptx>=0.6.0
 Pillow>=10.0.0
 cryptography>=41.0.0
-googletrans==3.1.0a0
+
+# Translation services (Google Translate alternative to avoid conflicts)
+deep-translator>=1.11.0
 deepl>=1.15.0
 requests>=2.31.0
 
