--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,31 @@
 # Core dependencies
 streamlit>=1.28.0
 openai>=1.0.0
-pdf2zh>=1.6.0
+
+# PDF processing - PyMuPDF as main PDF handler
+PyMuPDF>=1.23.0
+reportlab>=4.0.0
+
+# Document processing
 python-docx>=1.0.0
 openpyxl>=3.1.0
 python-pptx>=0.6.0
 Pillow>=10.0.0
+
+# Security and encryption
 cryptography>=41.0.0
 
-# Translation services (Google Translate alternative to avoid conflicts)
+# Translation services
 deep-translator>=1.11.0
 deepl>=1.15.0
 requests>=2.31.0
 
-# PDF processing
-PyMuPDF>=1.23.0
-reportlab>=4.0.0
-
 # Data processing
 numpy>=1.24.0
 pandas>=2.0.0
+
+# Optional: pdf2zh for advanced PDF translation (comment out if causing issues)
+# pdf2zh>=1.6.0
 
 # Optional OCR dependencies (comment out if not needed)
 # easyocr>=1.7.0
